# snackbox

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SNACKBOX_DESIGN.md  TODO.md  docker-compose.yml  pyproject.toml  snackbox-self.yaml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: IMPLEMENTATION_PLAN.md
examples/: github-workflow.yml  snackbox.yaml
src/snackbox/: __init__.py  __main__.py  cli.py  config.py  errors.py  toolchain.py
src/snackbox/cache/: __init__.py  manager.py
src/snackbox/steps/: __init__.py  assets.py  deps.py  installer.py  launcher.py  python.py  version.py  wheel.py
src/snackbox/templates/: __init__.py  installer.iss  launcher.c  launcher.rc  snackbox.yaml
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py
tests/test_steps/: __init__.py  test_assets.py  test_installer.py  test_launcher.py  test_version.py  test_wheel.py
